--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -11,9 +11,8 @@
 
         <ul class="nav nav-pills">
           <li class="nav-item"><a href="#" class="nav-link buttonHover text-white text_color" aria-current="page">Home</a></li>
-          <li class="nav-item"><a href="/blog" class="nav-link buttonHover text-white">Blog</a></li>
-          <li class="nav-item"><a href="#" class="nav-link buttonHover text-white">Pricing</a></li>
-          <li class="nav-item"><a href="#" class="nav-link buttonHover text-white">FAQs</a></li>
+          <li class="nav-item"><a href="/blog" class="nav-link buttonHover text-white">Contact</a></li>
+          <li class="nav-item"><a href="/faqs" class="nav-link buttonHover text-white">Blog</a></li>
           <li class="nav-item"><a href="/about" class="nav-link buttonHover text-white">About</a></li>
         </ul>
       </header>
