--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,5 +1,5 @@
 
-<div class="container-fluid footerBackground">
+<div class="container-fluid footerBackground footer">
   <div class="container">
     <footer class="d-flex flex-wrap justify-content-between align-items-center py-3">
       <div class="col-md-4 d-flex align-items-center">
