--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -3,17 +3,13 @@
   <div class="container">
       <header class="d-flex flex-wrap justify-content-center py-3">
         <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none">
-          <span class="fs-4">G<svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" fill="currentColor" class="bi bi-cookie" viewBox="0 0 16 16">
-            <path d="M6 7.5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0m4.5.5a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3m-.5 3.5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0"/>
-            <path d="M8 0a7.96 7.96 0 0 0-4.075 1.114q-.245.102-.437.28A8 8 0 1 0 8 0m3.25 14.201a1.5 1.5 0 0 0-2.13.71A7 7 0 0 1 8 15a6.97 6.97 0 0 1-3.845-1.15 1.5 1.5 0 1 0-2.005-2.005A6.97 6.97 0 0 1 1 8c0-1.953.8-3.719 2.09-4.989a1.5 1.5 0 1 0 2.469-1.574A7 7 0 0 1 8 1c1.42 0 2.742.423 3.845 1.15a1.5 1.5 0 1 0 2.005 2.005A6.97 6.97 0 0 1 15 8c0 .596-.074 1.174-.214 1.727a1.5 1.5 0 1 0-1.025 2.25 7 7 0 0 1-2.51 2.224Z"/>
-          </svg>al Blog</span>
+          <span class="fs-4 playfair-display">G<img src="/images/ball.png" height="15">al Blog</span>
         </a>
-
         <ul class="nav nav-pills">
           <li class="nav-item"><a href="#" class="nav-link buttonHover text-white text_color" aria-current="page">Home</a></li>
-          <li class="nav-item"><a href="/blog" class="nav-link buttonHover text-white">Contact</a></li>
+          <li class="nav-item"><a href="/contact" class="nav-link buttonHover text-white">Contact</a></li>
           <li class="nav-item"><a href="/faqs" class="nav-link buttonHover text-white">Blog</a></li>
-          <li class="nav-item"><a href="/about" class="nav-link buttonHover text-white">About</a></li>
+          <li class="nav-item"><a href="/about" class="nav-link buttonHover text-white buttonsBorder">About</a></li>
         </ul>
       </header>
     </div>
