--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,6 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -17,6 +20,15 @@
     <%- include("partials/header") %>
     
     <!--Main page-->
+    
+    <div class="p-4 p-md-5 mb-0 poster"> 
+      <div class="col-md-6 px-0">
+        <h1 class="display-4 fst-italic poster-text">Title of a longer featured blog post</h1>
+        <p class="lead my-3 poster-text">Multiple lines of text that form the lede, informing new readers quickly and efficiently about what’s most interesting in this post’s contents.</p>
+        <p class="lead mb-0 poster-text"><a href="#" class="text-white fw-bold">Continue reading...</a></p>
+      </div>
+    </div>
+    </div>
     <div class="container-fluid mainGradient">
       <div class="container col-xxl-8 px-4 py-5">
         <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
