--- a/views/partials/ligi/Ligue 1/ligue1.ejs
+++ b/views/partials/ligi/Ligue 1/ligue1.ejs
@@ -10,7 +10,7 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="/main.css"/>
-    <title>LaLiga</title>
+    <title>Ligue1</title>
 </head>
 <body>
     
@@ -29,5 +29,6 @@
       </div>
     </div>
 </div>
+<%- include("../../footer")  %>
 </body>
 </html>
