--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -2,14 +2,14 @@
 <div class="container-fluid footerBackground">
   <div class="container">
       <header class="d-flex flex-wrap justify-content-center py-3">
-        <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none">
-          <span class="fs-4 playfair-display">G<img src="/images/ball.png" height="15">al Blog</span>
+        <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-decoration-none">
+          <span class="fs-4 playfair-display"><p class="titlle_name">FootBool<span class="title_showing">love</span></p></span>
         </a>
         <ul class="nav nav-pills">
-          <li class="nav-item"><a href="#" class="nav-link buttonHover text-white text_color" aria-current="page">Home</a></li>
-          <li class="nav-item"><a href="/contact" class="nav-link buttonHover text-white">Contact</a></li>
-          <li class="nav-item"><a href="/faqs" class="nav-link buttonHover text-white">Blog</a></li>
-          <li class="nav-item"><a href="/about" class="nav-link buttonHover text-white buttonsBorder">About</a></li>
+          <li class="nav-item"><a href="#" class="nav-link buttonHover text_color" aria-current="page">Home</a></li>
+          <li class="nav-item"><a href="/contact" class="nav-link buttonHover text_color">Contact</a></li>
+          <li class="nav-item"><a href="/faqs" class="nav-link buttonHover text_color">Blog</a></li>
+          <li class="nav-item"><a href="/about" class="nav-link buttonHover buttonsBorder text_color">About</a></li>
         </ul>
       </header>
     </div>
