--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,6 +12,9 @@
       integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp"
       crossorigin="anonymous"
     />
+    <style>
+      @import url('https://fonts.googleapis.com/css2?family=Finger+Paint&display=swap');
+      </style>
     <link rel="stylesheet" href="/main.css" />
     <title>Blog_Web_Application</title>
   </head>
@@ -21,14 +24,26 @@
     
     <!--Main page-->
     
-    <div class="p-4 p-md-5 mb-0 poster"> 
+    <div class="p-4 p-md-5 mb-0 poster">
+      <div class="row"> 
       <div class="col-md-6 px-0">
         <h1 class="display-4 fst-italic poster-text">Title of a longer featured blog post</h1>
         <p class="lead my-3 poster-text">Multiple lines of text that form the lede, informing new readers quickly and efficiently about what’s most interesting in this post’s contents.</p>
         <p class="lead mb-0 poster-text"><a href="#" class="text-white fw-bold">Continue reading...</a></p>
       </div>
-    </div>
-    </div>
+      <div class="col-md-6 px-0">
+        <div class="row">
+          <div class="col p-1 animated_box"><img src="/images/la-liga-logo.png" alt="logo LaLiga" style="height: 7em; width: 7em;"></div>
+          <div class="col p-1 animated_box"><img src="/images/bundesliga-logo.png" alt="logo LaLiga" style="height: 7em; width: 7em;"></div>
+          <div class="col p-1 animated_box"><img src="/images/new-premier-league-2016-17-seeklogo.svg" alt="logo LaLiga" style="height: 7em; width: 7em;"></div> 
+        </div>
+        <div class="row">
+          <div class="col p-1 animated_box_second"><img src="/images/ob_f97139_l1.png" alt="logo LaLiga" style="height: 7em; width: 7em;"></div>
+          <div class="col p-1 animated_box_second"><img src="/images/serie-a-logo-transparent.png" alt="logo LaLiga" style="height: 7em; width: 7em;"></div>
+          <div class="col p-1 animated_box_second"><img src="/images/Image-Source-PlusPNG.com.png" alt="logo LaLiga" style="height: 7em; width: 7em;"></div>
+      </div></div>
+    </div></div>
+    
     <div class="container-fluid mainGradient">
       <div class="container col-xxl-8 px-4 py-5">
         
@@ -200,7 +215,7 @@
 
         <div class="row mb-2">
           <div class="col-md-6">
-            <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
+            <div class="row g-0 border rounded overflow-hidden shadow flex-md-row mb-4 h-md-250 position-relative">
               <div class="col p-4 d-flex flex-column position-static">
                 <strong class="d-inline-block mb-2 text-primary-emphasis">World</strong>
                 <h3 class="mb-0">Football News</h3>
@@ -221,13 +236,14 @@
               </div>
               <div class="col-auto d-none d-lg-block">
                 <svg class="bd-placeholder-img centered-image" width="200" height="250" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false">
-                  <image href="/images/pitch.jpeg">
+                  <image href="/images/news.png">
                   <title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
               </div>
             </div>
           </div>
+
           <div class="col-md-6">
-            <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
+            <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow h-md-250 position-relative">
               <div class="col p-4 d-flex flex-column position-static">
                 <strong class="d-inline-block mb-2 text-success-emphasis">Poland</strong>
                 <h3 class="mb-0">Ekstraklasa</h3>
@@ -244,7 +260,7 @@
               </div>
               <div class="col-auto d-none d-lg-block centered-image">
                 <svg class="bd-placeholder-img" width="200" height="250" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false">
-                  <image href="/images/remi.jpg">
+                  <image href="/images/boisko.png">
                   <title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
               </div>
             </div>
