--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,12 +1,12 @@
 
-<div class="container-fluid footerBackground footer">
+<div class="container-fluid footer_background footer">
   <div class="container">
     <footer class="d-flex flex-wrap justify-content-between align-items-center py-3">
       <div class="col-md-4 d-flex align-items-center">
         <a href="/" class="mb-3 me-2 mb-md-0 text-body-secondary text-decoration-none lh-1">
           <svg class="bi" width="30" height="24"><use xlink:href="#bootstrap"></use></svg>
         </a>
-        <span class="mb-3 mb-md-0 text-body-secondary">© Blog Web Application
+        <span class="mb-3 mb-md-0 text-body-secondary">© FootBool<span class="fotter_tittle">love</span>
           <!--I've added a date that is updating.-->
           <% const d = new Date()%><% getYear = d.getFullYear(); %><%= getYear %></p></span>
       </div>
