--- a/views/partials/ligi/LaLiga/laLiga.ejs
+++ b/views/partials/ligi/LaLiga/laLiga.ejs
@@ -22,12 +22,70 @@
       <div class="col-lg-6">
         <h1 class="display-5 fw-bold text-body-emphasis lh-1 mb-3">LaLiga<img src="/images/la-liga-logo.png" style="height: 2em; width: 2em;"></h1>
         <p class="lead">Quickly design and customize responsive mobile-first sites with Bootstrap, the world’s most popular front-end open source toolkit, featuring Sass variables and mixins, responsive grid system, extensive prebuilt components, and powerful JavaScript plugins.</p>
-        <div class="d-grid gap-2 d-md-flex justify-content-md-start">
-          <button type="button" class="btn btn-primary btn-lg px-4 me-md-2">Primary</button>
-          <button type="button" class="btn btn-outline-secondary btn-lg px-4">Default</button>
-        </div>
       </div>
-    </div>
+    </div> <h4><%= data.response[0].league.name %> Season: <%=data.response[0].league.season  %></h4>
+    <div>
+      <table class="table table-sm table-bordered table-hover table-style shadow">
+      <thead>
+        <tr class="table-headers table-gradient">
+          <th scope="col">Position</th>
+          <th scope="col">Team</th>
+          <th scope="col">Points</th>
+          <th scope="col">Goal difference</th>
+          <th scope="col">Form</th>
+        </tr>
+      </thead>
+      <tbody>
+        <% data.response[0].league.standings[0].forEach(team =>{%>
+        
+          <% if (team.rank <= 4) { %>
+          <tr style="background-color: skyblue;">
+            <td><%= team.rank %></td>
+            <td><img class="img_logo" src="https://media.api-sports.io/football/teams/<%= team.team.id %>.png" alt="logo"> <%= team.team.name %>  </td>
+            <td><%= team.points %></td>
+            <td><%= team.goalsDiff %></td>
+            <td><%= team.form %></td>
+          </tr> 
+          <% } else if (team.rank == 5) {%>
+            <tr style="background-color: burlywood;"><td><%= team.rank %></td>
+              <td><%= team.team.name %></td>
+              <td><%= team.points %></td>
+              <td><%= team.goalsDiff %></td>
+              <td><%= team.form %></td>
+            </tr>
+            
+          <%} else if (team.rank == 6) {%>
+            <tr style="background-color: blanchedalmond;"><td><%= team.rank %></td>
+              <td><%= team.team.name %></td>
+              <td><%= team.points %></td>
+              <td><%= team.goalsDiff %></td>
+              <td><%= team.form %></td>
+            </tr>
+            
+          <%} else if (team.rank >= 18) {%>
+            <tr style="background-color: red;"><td><%= team.rank %></td>
+              <td><%= team.team.name %></td>
+              <td><%= team.points %></td>
+              <td><%= team.goalsDiff %></td>
+              <td><%= team.form %></td>
+            </tr>
+            
+          <%} else { %>
+          <tr> 
+            <td><%= team.rank %></td>
+            <td><%= team.team.name %></td>
+            <td><%= team.points %></td>
+            <td><%= team.goalsDiff %></td>
+            <td><%= team.form %></td>
+          </tr> 
+         
+          <%}%>
+        </tr>
+        <%})%>
+      
+      </tbody>
+    </table></div>
+    
 </div>
 <%- include("../../footer")  %>
 </body>
